--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>GrowMark - Digital Marketing HTML Template</title>
+    <title>Rapid Fridge Repair - Domestic Fridge Repair & Regassing</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -42,33 +42,34 @@
 
     <!-- Topbar Start -->
     <div class="container-fluid bg-primary text-white d-none d-lg-flex">
-        <div class="container py-3">
-            <div class="d-flex align-items-center">
-                <a href="index.html">
-                        <img class="img-fluid" src="img/rapid-fridge-logo-v4.png" alt="Icon" style="width: 100px; height: 40px;">
-                        <p style="color: white; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">RAPID<span style="color: red; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>FRIDGE</strong></span><span style="color: black; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>REPAIRS</strong></span><br></p>
-                </a>
-                <div class="ms-auto d-flex align-items-center menu-link">
-                    <a href="" style="color: white"><small class="menu-link"><i class="fa fa-map-marker-alt me-2"></i>2 Kwartel Street Brackenfell Cape Town&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
-                    <a href="" style="color: white"><small class="menu-link"><i class="fa fa-envelope me-3"></i>sales@delmafridgerepair.co.za&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
-                    <a href="" style="color: white"><small class="menu-link"><i class="fa fa-phone-alt me-3"></i>+27614027786</small></a>
+            <div class="container py-3">
+                <div class="d-flex align-items-center">
+                    <!-- <a href="index.html">
+                            <img class="img-fluid" src="img/rapid-fridge-logo-v4.png" alt="Icon" style="width: 100px; height: 40px;">
+                            <p style="color: white; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">RAPID<span style="color: red; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>FRIDGE</strong></span><span style="color: black; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>REPAIRS</strong></span><br></p>
+                    </a>-->
+                    <div class="ms-auto d-flex align-items-center menu-link">
+                        <a href="" style="color: white"><small class="menu-link"><i class="fa fa-map-marker-alt me-2"></i>2 Kwartel Street Brackenfell Cape Town&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
+                        <a href="" style="color: white"><small class="menu-link"><i class="fa fa-envelope me-3"></i>sales@delmafridgerepair.co.za&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
+                        <a href="" style="color: white"><small class="menu-link"><i class="fa fa-phone-alt me-3"></i>+27614027786</small></a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Topbar End -->
-
-
-    <!-- Navbar Start -->
-    <div class="container-fluid bg-white sticky-top">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg bg-white navbar-light p-lg-0">
-                <a href="index.html" class="navbar-brand d-lg-none">
-                    <h1 class="fw-bold m-0">RapidFridgeRepair</h1>
-                </a>
-                <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+        <!-- Topbar End -->
+    
+    
+        <!-- Navbar Start -->
+        <div class="container-fluid bg-white sticky-top">
+            <div class="container">
+                <nav class="navbar navbar-expand-lg bg-white navbar-light p-lg-0">
+                        <a href="index.html">
+                            <img class="img-fluid py-2 px-3" src="img/rapid-fridge-logo-v4.png" alt="Icon" style="width: 100px; height: 40px;">
+                            <p style="color: blue; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">RAPID<span style="color: red; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>FRIDGE</strong></span><span style="color: black; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>REPAIRS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</strong></span><br></p>
+                        </a>
+                    <button type="button" class="navbar-toggler me-0 menu-item" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                        <span class="navbar-toggler-icon menu-item"></span>
+                    </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav">
                         <a href="index.html" class="nav-item nav-link active menu-item">Home</a>
