--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     <div class="container-fluid bg-primary text-white d-none d-lg-flex">
         <div class="container py-3">
             <div class="d-flex align-items-center">
-                <a href="index.html">
+                <!-- <a href="index.html">
                         <img class="img-fluid" src="img/rapid-fridge-logo-v4.png" alt="Icon" style="width: 100px; height: 40px;">
                         <p style="color: white; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">RAPID<span style="color: red; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>FRIDGE</strong></span><span style="color: black; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>REPAIRS</strong></span><br></p>
-                </a>
+                </a>-->
                 <div class="ms-auto d-flex align-items-center menu-link">
                     <a href="" style="color: white"><small class="menu-link"><i class="fa fa-map-marker-alt me-2"></i>2 Kwartel Street Brackenfell Cape Town&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
                     <a href="" style="color: white"><small class="menu-link"><i class="fa fa-envelope me-3"></i>sales@delmafridgerepair.co.za&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
@@ -63,11 +63,12 @@
     <div class="container-fluid bg-white sticky-top">
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light p-lg-0">
-                <a href="index.html" class="navbar-brand d-lg-none">
-                    <h1 class="fw-bold m-0">RapidFridgeRepair</h1>
-                </a>
-                <button type="button" class="navbar-toggler me-0" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
+                    <a href="index.html">
+                        <img class="img-fluid py-2 px-3" src="img/rapid-fridge-logo-v4.png" alt="Icon" style="width: 100px; height: 40px;">
+                        <p style="color: blue; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">RAPID<span style="color: red; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>FRIDGE</strong></span><span style="color: black; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>REPAIRS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</strong></span><br></p>
+                    </a>
+                <button type="button" class="navbar-toggler me-0 menu-item" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                    <span class="navbar-toggler-icon menu-item"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav">
@@ -160,36 +161,36 @@
             <div class="row g-0 feature-row">
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.1s">
                     <div class="feature-item border h-100 p-5 callout-item">
-                        <div class="btn-square bg-light rounded-circle mb-4" style="width: 64px; height: 64px;">
-                            <img class="img-fluid" src="img/icon/icon-1.png" alt="Icon">
-                        </div>
+                        <!--<div class="btn-square bg-light rounded-circle mb-4" style="width: 64px; height: 64px;">
+                             <img class="img-fluid" src="img/icon/icon-1.png" alt="Icon">
+                        </div> -->
                         <h5 class="mb-3">Guaranteered Fridge Repair Services</h5>
                         <p class="mb-0">WE ARE MOBILE : Call us now and schedule an appointment for prompt and effective repair service at your premises.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.3s">
                     <div class="feature-item border h-100 p-5 callout-item">
-                        <div class="btn-square bg-light rounded-circle mb-4" style="width: 64px; height: 64px;">
+                        <!-- <div class="btn-square bg-light rounded-circle mb-4" style="width: 64px; height: 64px;">
                             <img class="img-fluid" src="img/icon/icon-2.png" alt="Icon">
-                        </div>
+                        </div> -->
                         <h5 class="mb-3">Professional Staff</h5>
                         <p class="mb-0">Get your fridge repaired by Professional Staff</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.5s">
                     <div class="feature-item border h-100 p-5 callout-item">
-                        <div class="btn-square bg-light rounded-circle mb-4" style="width: 64px; height: 64px;">
+                        <!-- <div class="btn-square bg-light rounded-circle mb-4" style="width: 64px; height: 64px;">
                             <img class="img-fluid" src="img/icon/icon-3.png" alt="Icon">
-                        </div>
+                        </div> -->
                         <h5 class="mb-3">Fair Prices</h5>
                         <p class="mb-0">We offer affordable prices.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.7s">
                     <div class="feature-item border h-100 p-5 callout-item">
-                        <div class="btn-square bg-light rounded-circle mb-4" style="width: 64px; height: 64px;">
+                        <!-- <div class="btn-square bg-light rounded-circle mb-4" style="width: 64px; height: 64px;">
                             <img class="img-fluid" src="img/icon/icon-4.png" alt="Icon">
-                        </div>
+                        </div> -->
                         <h5 class="mb-3">24/7 Support</h5>
                         <p class="mb-0">We offer you a 24/7 hour on-site quotation on all your commercial and household appliances. We service ALL suburbs in and around Cape Town.</p>
                     </div>
