--- a/index.html
+++ b/index.html
@@ -440,25 +440,25 @@
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                 <div class="testimonial-item rounded p-4 p-lg-5 mb-5">
-                    <img class="mb-4" src="img/" alt="">
+                    <!-- <img class="mb-4" src="img/" alt=""> -->
                     <p class="mb-4">"I was impressed with the prompt and professional service provided by Rapid Fridge Repairs. They quickly diagnosed the issue with my fridge and had it up and running in no time. The technician was knowledgeable and friendly. I highly recommend their services!"</p>
                     <h5>Milly</h5>
                     <span class="text-primary">Profession</span>
                 </div>
                 <div class="testimonial-item rounded p-4 p-lg-5 mb-5">
-                    <img class="mb-4" src="img/" alt="">
+                    <!-- <img class="mb-4" src="img/" alt=""> -->
                     <p class="mb-4">"Rapid Fridge Repairs saved the day when my refrigerator suddenly stopped cooling. Their technician arrived on time, assessed the problem, and efficiently fixed it. Their attention to detail and commitment to customer satisfaction was outstanding. I won't hesitate to call them again for any appliance repairs."</p>
                     <h5>Jack</h5>
                     <span class="text-primary">Profession</span>
                 </div>
                 <div class="testimonial-item rounded p-4 p-lg-5 mb-5">
-                    <img class="mb-4" src="img/" alt="">
+                    <!-- <img class="mb-4" src="img/" alt=""> -->
                     <p class="mb-4">"I had a great experience with Rapid Fridge Repairs. They responded to my inquiry promptly, and their technician arrived right on schedule. He was courteous, professional, and skillfully resolved the issue with my dishwasher. The level of service and expertise provided left me thoroughly impressed."</p>
                     <h5>Sean</h5>
                     <span class="text-primary">Profession</span>
                 </div>
                 <div class="testimonial-item rounded p-4 p-lg-5 mb-5">
-                    <img class="mb-4" src="img/" alt="">
+                    <!-- <img class="mb-4" src="img/" alt=""> -->
                     <p class="mb-4">"Rapid Fridge Repairs exceeded my expectations in every way. Not only did they fix the issues with my washing machine, but they also took the time to explain what went wrong and provide valuable maintenance tips. Their commitment to customer education and satisfaction sets them apart from other repair services."</p>
                     <h5>Peter</h5>
                     <span class="text-primary">Profession</span>
