--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
     <!-- Topbar Start -->
-    <div class="container-fluid bg-primary text-white d-none d-lg-flex">
+    <div class="container-fluid bg-red text-white d-none d-lg-flex">
         <div class="container py-3">
             <div class="d-flex align-items-center">
                 <!-- <a href="index.html">
@@ -50,7 +50,7 @@
                 </a>-->
                 <div class="ms-auto d-flex align-items-center menu-link">
                     <a href="" style="color: white"><small class="menu-link"><i class="fa fa-map-marker-alt me-2"></i>2 Kwartel Street Brackenfell Cape Town&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
-                    <a href="" style="color: white"><small class="menu-link"><i class="fa fa-envelope me-3"></i>sales@delmafridgerepair.co.za&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
+                    <a href="" style="color: white"><small class="menu-link"><i class="fa fa-envelope me-3"></i>sales@rapidfridgerepair.co.za&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
                     <a href="" style="color: white"><small class="menu-link"><i class="fa fa-phone-alt me-3"></i>+27614027786</small></a>
                 </div>
             </div>
@@ -64,7 +64,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg bg-white navbar-light p-lg-0">
                     <a href="index.html">
-                        <img class="img-fluid py-2 px-3" src="img/rapid-fridge-logo-v4.png" alt="Icon" style="width: 100px; height: 40px;">
+                        <img class="img-fluid py-2 px-3" src="img/rapid-logo-v15.png" alt="Icon" style="width: 100px; height: 40px;">
                         <p style="color: blue; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">RAPID<span style="color: red; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>FRIDGE</strong></span><span style="color: black; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>REPAIRS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</strong></span><br></p>
                     </a>
                 <button type="button" class="navbar-toggler me-0 menu-item" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -98,10 +98,13 @@
                             <div class="row justify-content-start">
                                 <div class="col-lg-7 text-start">
                                     <p class="fs-4 text-white animated slideInRight">Welcome to <strong>Rapid Fridge Repair</strong></p>
-                                    <h1 class="display-1 text-white mb-4 animated slideInRight"><span style="text-transform:uppercase;"> We service all Areas in cape Town</span></h1>
+                                    <h3 class="display-1 text-white mb-4 animated slideInRight"><span style="text-transform:uppercase;"> We service all Areas in cape Town</span></h3>
                                     <!-- <h6 class="display-1 text-white mb-5 animated slideInLeft"><span> We repair and regas all makes and models of fridge.</span></h6> -->
-                                    <p class="mb-0">Fridge and Freezer Repair Service.</p>
-                                    <a href="service.html" class="btn btn-primary rounded-pill py-3 px-5 animated slideInRight menu-item">Explore More</a>
+                                    <p class="mb-0" style="font-size: 25px"><strong>Fridge and Freezer Repair Service.</strong></p>
+                                    <div class="btn-book-qoute">
+                                        <a href="contact.html" class="btn btn-primary rounded-pill py-3 px-5 animated slideInRight menu-item" style="margin: 40px">BOOK A TECHNICIAN</a>
+                                        <a href="service.html" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft menu-item" style="margin: 40px">OUR SERVICES</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -114,10 +117,13 @@
                             <div class="row justify-content-end">
                                 <div class="col-lg-7 text-end">
                                     <p class="fs-4 text-white animated slideInLeft">Welcome to <strong>Rapid Fridge Repair</strong></p>
-                                    <h1 class="display-1 text-white mb-5 animated slideInLeft"><span style="text-transform:uppercase;"> We repair domestic and commercial fridges</span></h1>
+                                    <h3 class="display-1 text-white mb-5 animated slideInLeft"><span style="text-transform:uppercase;"> We repair domestic and commercial fridges</span></h3>
                                     <!-- <h6 class="display-1 text-white mb-5 animated slideInLeft"><span> We repair all makes amd models of fridge.</span></h6> -->
-                                    <p class="mb-0">We repair all makes amd models of fridge.</p>
-                                    <a href="service.html" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft menu-item">Explore More</a>
+                                    <p class="mb-0" style="font-size: 25px"><strong>We repair all makes and models of fridge.</strong></p>
+                                    <div class="btn-book-qoute">
+                                        <a href="contact.html" class="btn btn-primary rounded-pill py-3 px-5 animated slideInRight menu-item" style="margin: 40px">BOOK A TECHNICIAN</a>
+                                        <a href="service.html" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft menu-item" style="margin: 40px">OUR SERVICES</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -130,10 +136,14 @@
                             <div class="row justify-content-start">
                                 <div class="col-lg-7 text-start">
                                     <p class="fs-4 text-white animated slideInRight">Welcome to <strong>Rapid Fridge Repair</strong></p>
-                                    <h1 class="display-1 text-white mb-4 animated slideInRight"><span style="text-transform:uppercase;"> We regas fridges all Areas in cape Town</span></h1>
+                                    <h3 class="display-1 text-white mb-4 animated slideInRight"><span style="text-transform:uppercase;"> We regas fridges all Areas in cape Town</span></h3>
                                     <!-- <small class="display-1 text-white mb-5 animated slideInLeft"><span> We regas all makes and models of fridges.</span></small> -->
-                                    <p class="mb-0">We regas all makes and models of fridges.</p>
-                                    <a href="service.html" class="btn btn-primary rounded-pill py-3 px-5 animated slideInRight read-more">Explore More</a>
+                                    <p class="mb-0" style="font-size: 25px">We regas all makes and models of fridges.</p>
+                                    <!-- <a href="service.html" class="btn btn-primary rounded-pill py-3 px-5 animated slideInRight read-more">Explore More</a> -->
+                                    <div class="btn-book-qoute">
+                                        <a href="contact.html" class="btn btn-primary rounded-pill py-3 px-5 animated slideInRight menu-item" style="margin: 40px">BOOK A TECHNICIAN</a>
+                                        <a href="service.html" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft menu-item" style="margin: 40px">OUR SERVICES</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -246,7 +256,7 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="fs-5 fw-medium text-primary">Our Services</p>
+                <p class="fs-5 fw-medium text-white text-center">Our Services</p>
                 <h1 class="display-5 mb-5">Fridge Repair and Re-gassing</h1>
             </div>
             <div class="row g-4">
@@ -361,7 +371,7 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <p class="fs-5 fw-medium text-primary">Get A Quote</p>
+                    <p class="fs-5 fw-medium text-white text-center">Get A Quote</p>
                     <h1 class="display-5 mb-4">Need Our Expert Help? We're Here!</h1>
                     <p>We repair and service the following types of refrigerator machines.</p>
                     <p class="mb-4">Guaranteeing our workmanship and service, we restore your comfort quickly, dependably, and affordably.</p>
@@ -379,7 +389,7 @@
                     </a>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <h2 class="mb-4">Get A Free Quote</h2>
+                    <h2 class="mb-4 text-center text-white">Get A Free Quote</h2>
                     <div class="row g-3">
                         <div class="col-sm-6">
                             <div class="form-floating">
@@ -435,7 +445,7 @@
     <div class="container-xxl pt-5">
         <div class="container">
             <div class="text-center text-md-start pb-5 pb-md-0 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="fs-5 fw-medium text-primary">Testimonial</p>
+                <p class="fs-5 fw-medium text-white text-center">Testimonial</p>
                 <h1 class="display-5 mb-5">What Clients Say About Our Services!</h1>
             </div>
             <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
@@ -492,7 +502,7 @@
                     <h4 class="text-white mb-4">Our Office</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>2 Kwartel Street Brackenfell Cape Town</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+27614027786</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>sales@delmafridgerepair.co.za</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>sales@rapidfridgerepair.co.za</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Quick Links</h4>
