--- a/service.html
+++ b/service.html
@@ -50,7 +50,7 @@
                     </a>-->
                     <div class="ms-auto d-flex align-items-center menu-link">
                         <a href="" style="color: white"><small class="menu-link"><i class="fa fa-map-marker-alt me-2"></i>2 Kwartel Street Brackenfell Cape Town&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
-                        <a href="" style="color: white"><small class="menu-link"><i class="fa fa-envelope me-3"></i>sales@delmafridgerepair.co.za&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
+                        <a href="" style="color: white"><small class="menu-link"><i class="fa fa-envelope me-3"></i>sales@rapidfridgerepair.co.za&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
                         <a href="" style="color: white"><small class="menu-link"><i class="fa fa-phone-alt me-3"></i>+27614027786</small></a>
                     </div>
                 </div>
@@ -64,27 +64,27 @@
             <div class="container">
                 <nav class="navbar navbar-expand-lg bg-white navbar-light p-lg-0">
                         <a href="index.html">
-                            <img class="img-fluid py-2 px-3" src="img/rapid-fridge-logo-v4.png" alt="Icon" style="width: 100px; height: 40px;">
+                            <img class="img-fluid py-2 px-3" src="img/rapid-logo-v15.png" alt="Icon" style="width: 100px; height: 40px;">
                             <p style="color: blue; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">RAPID<span style="color: red; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>FRIDGE</strong></span><span style="color: black; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif"><strong>REPAIRS&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</strong></span><br></p>
                         </a>
                     <button type="button" class="navbar-toggler me-0 menu-item" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                         <span class="navbar-toggler-icon menu-item"></span>
                     </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <div class="navbar-nav">
-                        <a href="index.html" class="nav-item nav-link active menu-item">Home</a>
-                        <a href="about.html" class="nav-item nav-link menu-item">About</a>
-                        <a href="service.html" class="nav-item nav-link menu-item">Services</a>
-                        <a href="contact.html" class="nav-item nav-link menu-item">Contact</a>
+                    <div class="collapse navbar-collapse" id="navbarCollapse">
+                        <div class="navbar-nav">
+                            <a href="index.html" class="nav-item nav-link active menu-item">Home</a>
+                            <a href="about.html" class="nav-item nav-link menu-item">About</a>
+                            <a href="service.html" class="nav-item nav-link menu-item">Services</a>
+                            <a href="contact.html" class="nav-item nav-link menu-item">Contact</a>
+                        </div>
+                        <div class="ms-auto d-none d-lg-block">
+                            <a href="contact.html" class="btn btn-primary rounded-pill py-2 px-3 menu-item">Get A Quote</a>
+                        </div>
                     </div>
-                    <div class="ms-auto d-none d-lg-block">
-                        <a href="contact.html" class="btn btn-primary rounded-pill py-2 px-3 menu-item">Get A Quote</a>
-                    </div>
-                </div>
-            </nav>
+                </nav>
+            </div>
         </div>
-    </div>
-    <!-- Navbar End -->
+        <!-- Navbar End -->
 
 
     <!-- Page Header Start -->
@@ -302,7 +302,7 @@
                     <h4 class="text-white mb-4">Our Office</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>2 Kwartel Street Brackenfell Cape Town</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+27614027786</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>sales@delmafridgerepair.co.za</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>sales@rapidfridgerepair.co.za</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Quick Links</h4>
