--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                                 <span>We focus in fridge & freezer repairs.</span>
                             </div>
                             <div class="col-sm-6 about-item">
-                                <img class="img-fluid mb-4" src="img/rapid-about-02.png" alt="">
+                                <img class="img-fluid mb-4" src="img/rapid-about-cooler-v1.png" alt="">
                                 <h5 class="mb-3">Dedicated Experts</h5>
                                 <span>We repair & do the replacement of the parts on fridgefreezers and much more on-site</span>
                             </div>
