--- a/contact.html
+++ b/contact.html
@@ -191,7 +191,7 @@
         <!-- Google Map End -->
     </div>
 
-    !-- Footer Start -->
+    <!-- Footer Start -->
     <div class="container-fluid bg-dark footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
             <div class="container py-5">
                 <div class="row g-5">
