changed font color

--- a/contact.html
+++ b/contact.html
@@ -178,7 +178,7 @@
             </div>
         </div>
         <!-- Contact End -->
-        <h2 class="text-center">Our Location</h2>
+        <h2 class="text-center text-white">Our Location</h2>
         <!-- Google Map Start -->
         <div data-wow-delay="0.1s">
             <div>
