--- a/service.html
+++ b/service.html
@@ -100,7 +100,7 @@
     <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                    <p class="fs-5 fw-medium text-primary">Our Services</p>
+                    <p class="fs-5 fw-medium text-white ">Our Services</p>
                     <h1 class="display-5 mb-5">Fridge Repair and Re-gassing</h1>
                 </div>
                 <div class="row g-4">
