--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
                         <div class="container">
                             <div class="row justify-content-start">
                                 <div class="col-lg-7 text-start">
-                                    <p class="fs-4 text-white animated slideInRight">Welcome to <strong>Rapid Fridge Repair</strong></p>
-                                    <h3 class="display-1 text-white mb-4 animated slideInRight"><span style="text-transform:uppercase;"> We service all Areas in cape Town</span></h3>
+                                    <p class="fs-4 animated slideInRight" style="color: red">Welcome to <strong>Rapid Fridge Repair</strong></p>
+                                    <h3 class="display-1 text-red mb-4 animated slideInRight"><span style="text-transform:uppercase;"> We service all Areas in cape Town</span></h3>
                                     <!-- <h6 class="display-1 text-white mb-5 animated slideInLeft"><span> We repair and regas all makes and models of fridge.</span></h6> -->
-                                    <p class="mb-0" style="font-size: 25px"><strong>Fridge and Freezer Repair Service.</strong></p>
+                                    <p class="mb-0" style="font-size: 25px; color: red"><strong>Fridge and Freezer Repair Service.</strong></p>
                                     <div class="btn-book-qoute">
                                         <a href="contact.html" class="btn btn-primary rounded-pill py-3 px-5 animated slideInRight menu-item" style="margin: 40px">BOOK A TECHNICIAN</a>
                                         <a href="service.html" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft menu-item" style="margin: 40px">OUR SERVICES</a>
