changed font color

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
                         <div class="container">
                             <div class="row justify-content-end">
                                 <div class="col-lg-7 text-end">
-                                    <p class="fs-4 text-white animated slideInLeft">Welcome to <strong>Rapid Fridge Repair</strong></p>
+                                    <p class="fs-4 animated slideInLeft" style="color: red">Welcome to <strong>Rapid Fridge Repair</strong></p>
                                     <h3 class="display-1 text-white mb-5 animated slideInLeft"><span style="text-transform:uppercase;"> We repair domestic and commercial fridges</span></h3>
                                     <!-- <h6 class="display-1 text-white mb-5 animated slideInLeft"><span> We repair all makes amd models of fridge.</span></h6> -->
-                                    <p class="mb-0" style="font-size: 25px"><strong>We repair all makes and models of fridge.</strong></p>
+                                    <p class="mb-0" style="font-size: 25px; color: red"><strong>We repair all makes and models of fridge.</strong></p>
                                     <div class="btn-book-qoute">
                                         <a href="contact.html" class="btn btn-primary rounded-pill py-3 px-5 animated slideInRight menu-item" style="margin: 40px">BOOK A TECHNICIAN</a>
                                         <a href="service.html" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft menu-item" style="margin: 40px">OUR SERVICES</a>
@@ -135,10 +135,10 @@
                         <div class="container">
                             <div class="row justify-content-start">
                                 <div class="col-lg-7 text-start">
-                                    <p class="fs-4 text-white animated slideInRight">Welcome to <strong>Rapid Fridge Repair</strong></p>
+                                    <p class="fs-4 animated slideInRight" style="color: red">Welcome to <strong>Rapid Fridge Repair</strong></p>
                                     <h3 class="display-1 text-white mb-4 animated slideInRight"><span style="text-transform:uppercase;"> We regas fridges all Areas in cape Town</span></h3>
                                     <!-- <small class="display-1 text-white mb-5 animated slideInLeft"><span> We regas all makes and models of fridges.</span></small> -->
-                                    <p class="mb-0" style="font-size: 25px">We regas all makes and models of fridges.</p>
+                                    <p class="mb-0" style="font-size: 25px; color: red">We regas all makes and models of fridges.</p>
                                     <!-- <a href="service.html" class="btn btn-primary rounded-pill py-3 px-5 animated slideInRight read-more">Explore More</a> -->
                                     <div class="btn-book-qoute">
                                         <a href="contact.html" class="btn btn-primary rounded-pill py-3 px-5 animated slideInRight menu-item" style="margin: 40px">BOOK A TECHNICIAN</a>
