--- a/about.html
+++ b/about.html
@@ -174,10 +174,10 @@
             <hr>
             <div class="d-flex justify-content-center align-items-center">
                 <div class="d-flex align-items-md-center">
-                    <a class="btn btn-square btn-light rounded-circle social-icon" href=""><i class="fab fa-twitter"></i></a>
+                    <!-- <a class="btn btn-square btn-light rounded-circle social-icon" href=""><i class="fab fa-twitter"></i></a> -->
                     <a class="btn btn-square btn-light rounded-circle me-2 social-icon" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-square btn-light rounded-circle me-2 social-icon" href=""><i class="fab fa-youtube"></i></a>
-                    <a class="btn btn-square btn-light rounded-circle me-2 social-icon" href=""><i class="fab fa-linkedin-in"></i></a>
+                    <!-- <a class="btn btn-square btn-light rounded-circle me-2 social-icon" href=""><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-square btn-light rounded-circle me-2 social-icon" href=""><i class="fab fa-linkedin-in"></i></a> -->
                 </div>
             </div>
             <!-- Whatsapp Start -->
