--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,12 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <!-- Script for Contact form -->
+    <script
+      src="https://challenges.cloudflare.com/turnstile/v0/api.js"
+      async
+      defer
+    ></script>
 </head>
 
 <body>
@@ -142,7 +148,7 @@
                     <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
                         <h3 class="mb-4">Need more Information?</h3>
                         <p class="mb-4"><strong>Please fill in the form and one of our specialist will be in touch with you.</strong></a>.</p>
-                        <form>
+                        <form method="POST" action="/api/contact">
                             <div class="row g-3">
                                 <div class="col-md-6">
                                     <div class="form-floating">
@@ -168,6 +174,8 @@
                                         <label for="message">Message</label>
                                     </div>
                                 </div>
+                                <!-- Adding Contact form functionality -->
+                                <div class="cf-turnstile" data-sitekey="0x4AAAAAAAQ-hYnMxleBik-1"></div>
                                 <div class="col-12">
                                     <button class="btn btn-primary rounded-pill py-3 px-5" type="submit">Send Message</button>
                                 </div>
