removed cloudflare reCAPTCHA

--- a/contact.html
+++ b/contact.html
@@ -175,7 +175,7 @@
                                     </div>
                                 </div>
                                 <!-- Adding Contact form functionality -->
-                                <div class="cf-turnstile" data-sitekey="0x4AAAAAAAQ-hYnMxleBik-1"></div>
+                                <!-- <div class="cf-turnstile" data-sitekey="0x4AAAAAAAQ-hYnMxleBik-1"></div> -->
                                 <div class="col-12">
                                     <button class="btn btn-primary rounded-pill py-3 px-5" type="submit">Send Message</button>
                                 </div>
