added contact form functionality

--- a/service.html
+++ b/service.html
@@ -50,7 +50,7 @@
                     </a>-->
                     <div class="ms-auto d-flex align-items-center menu-link">
                         <a href="" style="color: white"><small class="menu-link"><i class="fa fa-map-marker-alt me-2"></i>9 Rhodesia Street, WoodStock, Cape Town&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
-                        <a href="" style="color: white"><small class="menu-link"><i class="fa fa-envelope me-3"></i>sales@rapidfridgerepair.co.za&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
+                        <a href="" style="color: white"><small class="menu-link"><i class="fa fa-envelope me-3"></i>info@rapidfridgerepairs.com&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
                         <a href="" style="color: white"><small class="menu-link"><i class="fa fa-phone-alt me-3"></i>+27614027786</small></a>
                     </div>
                 </div>
@@ -302,7 +302,7 @@
                         <h4 class="text-white mb-4">Our Office</h4>
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>9 Rhodesia Street, WoodStock, Cape Town</p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+27614027786</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>sales@rapidfridgerepair.co.za</p>
+                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@rapidfridgerepair.co.za</p>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h4 class="text-white mb-4">Quick Links</h4>
