--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,15 @@
       async
       defer
     ></script>
+    <script>
+        function fun(){
+            document.getElementById('fullname').value='';
+            document.getElementById('email').value='';
+            document.getElementById('subject').value='';
+            document.getElementById('message').value='';
+            window.location.href = "success.html";
+        }
+    </script>
 </head>
 
 <body>
@@ -56,7 +65,7 @@
                     </a>-->
                     <div class="ms-auto d-flex align-items-center menu-link">
                         <a href="" style="color: white"><small class="menu-link"><i class="fa fa-map-marker-alt me-2"></i>9 Rhodesia Street, WoodStock, Cape Town&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
-                        <a href="" style="color: white"><small class="menu-link"><i class="fa fa-envelope me-3"></i>sales@rapidfridgerepair.co.za&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
+                        <a href="" style="color: white"><small class="menu-link"><i class="fa fa-envelope me-3"></i>info@rapidfridgerepairs.com&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
                         <a href="" style="color: white"><small class="menu-link"><i class="fa fa-phone-alt me-3"></i>+27614027786</small></a>
                     </div>
                 </div>
@@ -107,7 +116,7 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                    <h4 class="display-5 mb-5">If You Have Any Query About Fridge Repair and Re-gassing, Please Contact Us</h4>
+                    <h4 class="display-5 mb-5 text-white">If You Have Any Query About Fridge Repair and Re-gassing, Please Contact Us</h4>
                 </div>
                 <!-- Contact Section -->
                 <div class="container-xxl py-5">
@@ -137,7 +146,8 @@
                                             <h5 class="mb-3">EMAIL US ON</h4>
                                             <p class="mb-0">
                 
-                                                    sales@rapidfridgerepair.co.za </p>
+                                                    info@rapidfridgerepair.co.za 
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -148,38 +158,21 @@
                     <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
                         <h3 class="mb-4">Need more Information?</h3>
                         <p class="mb-4"><strong>Please fill in the form and one of our specialist will be in touch with you.</strong></a>.</p>
-                        <form method="POST" action="/api/contact">
-                            <div class="row g-3">
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                        <label for="name">Your Name</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                        <label for="email">Your Email</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control" id="subject" placeholder="Subject">
-                                        <label for="subject">Subject</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-floating">
-                                        <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 200px"></textarea>
-                                        <label for="message">Message</label>
-                                    </div>
-                                </div>
-                                <!-- Adding Contact form functionality -->
-                                <!-- <div class="cf-turnstile" data-sitekey="0x4AAAAAAAQ-hYnMxleBik-1"></div> -->
-                                <div class="col-12">
-                                    <button class="btn btn-primary rounded-pill py-3 px-5" type="submit">Send Message</button>
-                                </div>
-                            </div>
+                        <form action="https://api.staticforms.xyz/submit" method="post" target="_blank">
+                            <!-- Replace with accesKey sent to your email -->
+                            <input type="hidden" name="accessKey" value="34b20ec5-8d96-462a-b27b-2a07c436fcd5"> <!-- Required -->
+                            <input type="text" class="form-control" name="name" placeholder="Enter Your Name" style="width: 400px" required><br>
+                            <input type="text" class="form-control" name="subject" placeholder="Subject" style="width: 400px" required><br>
+                            <input type="text" class="form-control" name="email" placeholder="Your Email" style="width: 400px" required><br>
+                            <input type="text" class="form-control" name="phone" placeholder="Your phone number" style="width: 400px" required ><br>
+                            <textarea class="form-control" name="message" placeholder="Your Message" style="height: 200px" required></textarea><br>
+                            <!-- If you want replyTo to be set to specific email -->
+                            <input type="hidden" name="replyTo" value=""> <!-- Optional -->
+                            <!-- Specify @ as reply to value if you want it to be customers email -->
+                            <input type="hidden" name="replyTo" value="@"> <!-- Optional -->
+                            <!-- If you want form to redirect to a specific url after submission -->
+                            <input type="hidden" name="redirectTo" value="https://rapidfridgerepairs.com/success">
+                            <input type="submit" value="Submit" style="width: 200px; height: 70px"/>
                         </form>
                     </div>
                 </div>
@@ -217,7 +210,7 @@
                         <h4 class="text-white mb-4">Our Office</h4>
                         <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>9 Rhodesia Street, WoodStock, Cape Town</p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+27614027786</p>
-                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>sales@rapidfridgerepair.co.za</p>
+                        <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@rapidfridgerepair.co.za</p>
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h4 class="text-white mb-4">Quick Links</h4>
