--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <script>
+        function fun(){
+            document.getElementById('fullname').value='';
+            document.getElementById('email').value='';
+            document.getElementById('mobile').value='';
+            document.getElementById("service").value='';
+            document.getElementById('message').value='';
+            window.location.href = "success.html";
+        }
+    </script>
 </head>
 
 <body>
@@ -50,8 +60,8 @@
                 </a>-->
                 <div class="ms-auto d-flex align-items-center menu-link">
                     <a href="" style="color: white"><small class="menu-link"><i class="fa fa-map-marker-alt me-2"></i>9 Rhodesia Street, WoodStock, Cape Town&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
-                    <a href="" style="color: white"><small class="menu-link"><i class="fa fa-envelope me-3"></i>sales@rapidfridgerepair.co.za&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
-                    <a href="" style="color: white"><small class="menu-link"><i class="fa fa-phone-alt me-3"></i>+27614027786</small></a>
+                    <a href="mailto:rapidrepairs349@gmail.com" style="color: white"><small class="menu-link"><i class="fa fa-envelope me-3"></i>info@rapidfridgerepairs.com&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</small></a>
+                    <a href="tel:+27614027786" style="color: white"><small class="menu-link"><i class="fa fa-phone-alt me-3"></i>+27614027786</small></a>
                 </div>
             </div>
         </div>
@@ -283,7 +293,8 @@
                             <h5 class="mb-3">Freezers</h4>
                             <p class="mb-0">
                                                                 
-                                Our team of skilled technicians is adept at handling freezer repairs, addressing issues such as temperature fluctuations, defrosting problems, and motor malfunctions.</p>
+                                Our team of skilled technicians is adept at handling freezer repairs, addressing issues such as temperature fluctuations, defrosting problems, and motor malfunctions.
+                            </p>
                         </div>
                         <div class="service-btn rounded-0 rounded-bottom">
                             <a class="text-primary fw-medium" href="service.html">Read More<i class="bi bi-chevron-double-right ms-2"></i></a>
@@ -391,47 +402,57 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <h2 class="mb-4 text-center text-white">Get A Free Quote</h2>
                     <div class="row g-3">
-                        <div class="col-sm-6">
-                            <div class="form-floating">
-                                <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                <label for="name">Your Name</label>
+                        <!--<form action="https://formspree.io/f/myyrwgjy" method="POST" name="Equiry-form" onsubmit="this.reset()" target="_blank">
+                            <div class="col-sm-8">
+                                <br>
+                                <div class="">
+                                    <input type="text" class="form-control" id="fullname" name="fullname" placeholder="Your Fullname">
+                                    <label for="name"></label>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="form-floating">
-                                <input type="email" class="form-control" id="mail" placeholder="Your Email">
-                                <label for="mail">Your Email</label>
+                            <div class="col-sm-8">
+                                <div class="">
+                                    <input type="email" class="form-control" id="email" name="email" placeholder="Your Email">
+                                    <label for="mail"></label>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="form-floating">
-                                <input type="text" class="form-control" id="mobile" placeholder="Your Mobile">
-                                <label for="mobile">Your Mobile</label>
+                            <div class="col-sm-8">
+                                <div class="">
+                                    <input type="text" class="form-control" id="mobile" name="mobile" placeholder="Your Mobile">
+                                    <label for="mobile"></label>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="form-floating">
-                                <select class="form-select" id="service">
-                                    <option selected>-------</option>
-                                    <option value="">Not Marking Cold Enough</option>
-                                    <option value="">Makes noise</option>
-                                    <option value="">clicking sound</option>
-                                    <option value="">ight on but fridge not cold</option>
-                                    <option value="">Leaking or water</option>
-                                    <option value="">Compressor not running</option>
-                                    <option value="">Re-gassing</option>
-                                </select>
-                                <label for="service">Choose A Service</label>
+                            <div class="col-sm-8">
+                                <div class="">
+                                    <select class="form-select" id="service" name="service" placeholder="Select a Service">
+                                        <option selected>Select a Service</option>
+                                        <option value="">Not Marking Cold Enough</option>
+                                        <option value="">Makes noise</option>
+                                        <option value="">clicking sound</option>
+                                        <option value="">Light on but fridge not cold</option>
+                                        <option value="">Leaking or water</option>
+                                        <option value="">Compressor not running</option>
+                                        <option value="">Re-gassing</option>
+                                    </select>
+                                    <label for="service"></label>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="form-floating">
-                                <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 130px"></textarea>
-                                <label for="message">Message</label>
+                            <div class="col-8">
+                                <div class="">
+                                    <textarea class="form-control" placeholder="Leave a message here" id="message" name="message" style="height: 130px"></textarea>
+                                    <label for="message"></label>
+                                </div>
                             </div>
-                        </div>
+                            <div class="col-6 text-center">
+                                <a href="contact.html">
+                                        <button class="btn btn-primary w-100 py-3 about-item" type="submit">Submit Now</button>
+                                </a>
+                            </div>
+                        </form> -->
                         <div class="col-12 text-center">
-                            <button class="btn btn-primary w-100 py-3 about-item" type="submit">Submit Now</button>
+                            <a href="contact.html">
+                                <button class="btn btn-primary w-100 py-3 mb-4 about-item" type="submit">Get A Free Quote Now</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -502,7 +523,7 @@
                     <h4 class="text-white mb-4">Our Office</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>9 Rhodesia Street, WoodStock, Cape Town</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+27614027786</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>sales@rapidfridgerepair.co.za</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@rapidfridgerepair.co.za</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Quick Links</h4>
