added link to facebook page

--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
         <div class="d-flex justify-content-center align-items-center">
             <div class="d-flex align-items-md-center">
                 <!-- <a class="btn btn-square btn-light rounded-circle social-icon" href=""><i class="fab fa-twitter"></i></a> -->
-                <a class="btn btn-square btn-light rounded-circle me-2 social-icon" href=""><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-square btn-light rounded-circle me-2 social-icon" href="https://www.facebook.com/profile.php?id=61556097405360&mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook-f"></i></a>
                 <!-- <a class="btn btn-square btn-light rounded-circle me-2 social-icon" href=""><i class="fab fa-youtube"></i></a>
                 <a class="btn btn-square btn-light rounded-circle me-2 social-icon" href=""><i class="fab fa-linkedin-in"></i></a> -->
             </div>
