--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) start -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16459735109"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'AW-16459735109');
+    </script>
+    <!-- Google tag (gtag.js) end -->
     <meta charset="utf-8">
     <title>Rapid Fridge Repair - Domestic Fridge Repair & Regassing</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
