added google phone snippet

--- a/about.html
+++ b/about.html
@@ -12,6 +12,13 @@
     gtag('config', 'AW-16459735109');
     </script>
     <!-- Google tag (gtag.js) end -->
+    <!-- Google phone snippet start -->
+    <script>
+        gtag('config', 'AW-16459735109/qqMcCKz9-5IZEMXAzqg9', {
+            'phone_conversion_number': '+27 61 402 7786'
+        });
+    </script>
+    <!-- Google phone snippet end -->
     <meta charset="utf-8">
     <title>Rapid Fridge Repair - Domestic Fridge Repair & Regassing</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
