--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     </script>
     <!-- Google phone snippet end -->
     <meta charset="utf-8">
-    <title>Rapid Fridge Repair - Domestic Fridge Repair & Regassing</title>
+    <title>About Rapid Fridge Repair - Domestic Fridge Repair & Regassing</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
