added meta description

--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     <meta charset="utf-8">
     <title>Rapid Fridge Repairs - Domestic Fridge Repairs & Regassing Specialist</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta name="description" content="Specialist at Rapid Fridge Repairs and Re-gassing all areas in Cape Town.">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
