--- a/success.html
+++ b/success.html
@@ -23,7 +23,7 @@
     <title>Thank You For Contacting Us - Rapid Fridge Repair Domestic Fridge Repair & Regassing</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta name="description" content="Thank you for contacting Rapid Fridge Repairs and Re-gassing all areas in Cape Town.">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
