--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,7 @@
     <meta charset="utf-8">
     <title>Contact Rapid Fridge Repair - Domestic Fridge Repair & Regassing</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta name="description" content="Contact Rapid Fridge Repairs and Re-gassing all areas in Cape Town Same Day Service.">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
