added cononical link

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="description" content="Specialist at Rapid Fridge Repairs and Re-gassing all areas in Cape Town.">
 
+    <!-- canonical links -->
+    <link rel="canonical" href="https://rapidfridgerepairs.com"/>
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
