--- a/success.html
+++ b/success.html
@@ -25,6 +25,8 @@
     <meta content="" name="keywords">
     <meta name="description" content="Thank you for contacting Rapid Fridge Repairs and Re-gassing all areas in Cape Town.">
 
+    <!-- canonical links -->
+    <link rel="canonical" href="https://rapidfridgerepairs.com"/>
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
