--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="description" content="Contact Rapid Fridge Repairs and Re-gassing all areas in Cape Town Same Day Service.">
 
+    <!-- canonical links -->
+    <link rel="canonical" href="https://rapidfridgerepairs.com"/>
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
