--- a/service.html
+++ b/service.html
@@ -24,6 +24,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="description" content="Services at Rapid Fridge Repairs and Re-gassing all areas in Cape Town 24/7.">
 
+    <!-- canonical links -->
+    <link rel="canonical" href="https://rapidfridgerepairs.com"/>
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
